# gopay-py

./: .gitignore  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
docs/: API_REFERENCE.md  API_SERVICE.md  BUSINESS_SCENARIOS.md  FUTURE_EXTENSIONS.md  QUICKSTART.md  README.md
